# Chip-8

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  tests.rs
src/app/: mod.rs
src/app/chip/: display.rs  instruction.rs  mod.rs
src/app/chip/debug/: rom.rs
src/app/ui/: input.rs  mod.rs  screen.rs
src/chip/: chip_8.rs  display.rs  input.rs  instruction.rs  mod.rs  rom.rs  screen.rs  sprite.rs
src/chip/debug/: rom.rs
src/chip_controller/: mod.rs
src/chip_controller/chip/: input.rs  instruction.rs  mod.rs
src/chip_controller/chip/debug/: mod.rs  sprite.rs
src/front_end/: mod.rs  tui.rs
src/ui/: input.rs  mod.rs  screen.rs
