[package]
name = "chip_8"
version = "0.8.0"
authors = ["Herculean <55994229+Herkulisch@users.noreply.github.com>"]
edition = "2018"
exclude = ["target", "Cargo.lock"]

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.8.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
